// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > Snapshots > should match snapshot for default state 1`] = `
<div
  class="relative inline-block w-full"
>
  <button
    class="w-full flex items-center justify-between gap-2 px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] text-base py-2"
    type="button"
  >
    <span
      class="flex-1 text-left truncate text-gray-400"
    >
      Select an option
    </span>
    <span
      class="flex items-center gap-1"
    >
      <!---->
      <span
        class="inline-flex"
      >
        <svg
          class="w-5 h-5 text-gray-400 transition-transform"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </button>
  <!---->
</div>
`;

exports[`Select > Snapshots > should match snapshot for disabled state 1`] = `
<div
  class="relative inline-block w-full"
>
  <button
    class="w-full flex items-center justify-between gap-2 px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] text-base py-2 disabled:bg-gray-50 disabled:text-gray-500 disabled:cursor-not-allowed disabled:border-gray-200"
    disabled=""
    type="button"
  >
    <span
      class="flex-1 text-left truncate text-gray-400"
    >
      Select an option
    </span>
    <span
      class="flex items-center gap-1"
    >
      <!---->
      <span
        class="inline-flex"
      >
        <svg
          class="w-5 h-5 text-gray-400 transition-transform"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </button>
  <!---->
</div>
`;

exports[`Select > Snapshots > should match snapshot with selected value 1`] = `
<div
  class="relative inline-block w-full"
>
  <button
    class="w-full flex items-center justify-between gap-2 px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] text-base py-2"
    type="button"
  >
    <span
      class="flex-1 text-left truncate"
    >
      Option 1
    </span>
    <span
      class="flex items-center gap-1"
    >
      <span
        class="inline-flex"
      >
        <svg
          class="w-4 h-4 text-gray-400 hover:text-gray-600"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="inline-flex"
      >
        <svg
          class="w-5 h-5 text-gray-400 transition-transform"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </button>
  <!---->
</div>
`;
